# app/Http/Controllers/ProductImageController.php
@@ -2,23 +2,23 @@
 
 namespace App\Http\Controllers;
 
-use App\Http\Requests\ProductSearchRequest;
-use App\Http\Requests\ProductStoreRequest;
-use App\Http\Requests\ProductUpdateRequest;
-use App\ORM\Product;
-use App\Services\ProductService;
+use App\Http\Requests\ProductImageSearchRequest;
+use App\Http\Requests\ProductImageStoreRequest;
+use App\Http\Requests\ProductImageUpdateRequest;
+use App\ORM\ProductImage;
+use App\Services\ProductImageService;
 use Throwable;
 
-class ProductController extends BaseController
+class ProductImageController extends BaseController
 {
     /**
      * @SWG\Get(
-     *     path="/api/products",
+     *     path="/api/product_images",
      *     summary="RESOURCE一覧",
      *     description="RESOURCE一覧を返す。",
      *     consumes={"application/json"},
      *     produces={"application/json"},
-     *     tags={"Products"},
+     *     tags={"ProductImages"},
      *
      *     @SWG\Parameter(
      *         name="Authorization",
@@ -32,8 +32,8 @@ class ProductController extends BaseController
      *         description="Success",
      *         @SWG\Schema(
      *             @SWG\Property(
-     *                 property="products",
-     *                 ref="#/definitions/product"
+     *                 property="product_images",
+     *                 ref="#/definitions/product_image"
      *             )
      *         )
      *     ),
@@ -72,19 +72,19 @@ class ProductController extends BaseController
      */
     public function index()
     {
-        $products = Product::with('productCategory')->orderBy('id')->get();
+        $productImages = ProductImage::orderBy('id')->get();
 
-        return response()->json(compact('products'));
+        return response()->json(compact('productImages'));
     }
 
     /**
      * @SWG\Post(
-     *     path="/api/products",
+     *     path="/api/product_images",
      *     summary="RESOURCE登録",
      *     description="RESOURCEを登録する。",
      *     consumes={"application/json"},
      *     produces={"application/json"},
-     *     tags={"Products"},
+     *     tags={"ProductImages"},
      *
      *    @SWG\Parameter(
      *         name="Authorization",
@@ -100,7 +100,7 @@ class ProductController extends BaseController
      *         required=true,
      *         type="object",
      *         @SWG\Schema(
-     *             ref="#/definitions/ProductStoreRequest"
+     *             ref="#/definitions/ProductImageStoreRequest"
      *         )
      *     ),
      *
@@ -109,9 +109,9 @@ class ProductController extends BaseController
      *         description="Success",
      *         @SWG\Schema(
      *             @SWG\Property(
-     *                 property="product",
+     *                 property="product_image",
      *                 type="object",
-     *                 ref="#/definitions/product"
+     *                 ref="#/definitions/product_image"
      *             )
      *         )
      *     ),
@@ -146,28 +146,28 @@ class ProductController extends BaseController
      *
      * Store a newly created resource in storage.
      *
-     * @param ProductService $service
-     * @param ProductStoreRequest $request
+     * @param ProductImageService $service
+     * @param ProductImageStoreRequest $request
      *
      * @throws Throwable
      *
      * @return \Illuminate\Http\Response
      */
-    public function store(ProductService $service, ProductStoreRequest $request)
+    public function store(ProductImageService $service, ProductImageStoreRequest $request)
     {
-        $product = $service->store($request);
+        $productImage = $service->store($request);
 
-        return response()->json(compact('product'));
+        return response()->json(compact('productImage'));
     }
 
     /**
      * @SWG\Get(
-     *     path="/api/products/{id}",
+     *     path="/api/product_images/{id}",
      *     summary="RESOURCE取得",
      *     description="RESOURCEを取得する。",
      *     consumes={"application/json"},
      *     produces={"application/json"},
-     *     tags={"Products"},
+     *     tags={"ProductImages"},
      *
      *    @SWG\Parameter(
      *         name="Authorization",
@@ -183,9 +183,9 @@ class ProductController extends BaseController
      *         description="Success",
      *         @SWG\Schema(
      *             @SWG\Property(
-     *                 property="product",
+     *                 property="product_image",
      *                 type="object",
-     *                 ref="#/definitions/product"
+     *                 ref="#/definitions/product_image"
      *             )
      *         )
      *     ),
@@ -220,23 +220,23 @@ class ProductController extends BaseController
      *
      * Display the specified resource.
      *
-     * @param Product $product
+     * @param ProductImage $productImage
      *
      * @return \Illuminate\Http\Response
      */
-    public function show(Product $product)
+    public function show(ProductImage $productImage)
     {
-        return response()->json(compact('product'));
+        return response()->json(compact('productImage'));
     }
 
     /**
      * @SWG\Put(
-     *     path="/api/products/{id}",
+     *     path="/api/product_images/{id}",
      *     summary="RESOURCE更新",
      *     description="RESOURCEを更新する。",
      *     consumes={"application/json"},
      *     produces={"application/json"},
-     *     tags={"Products"},
+     *     tags={"ProductImages"},
      *
      *    @SWG\Parameter(
      *         name="Authorization",
@@ -253,7 +253,7 @@ class ProductController extends BaseController
      *         required=true,
      *         type="object",
      *         @SWG\Schema(
-     *             ref="#/definitions/ProductUpdateRequest"
+     *             ref="#/definitions/ProductImageUpdateRequest"
      *         )
      *     ),
      *
@@ -262,9 +262,9 @@ class ProductController extends BaseController
      *         description="Success",
      *         @SWG\Schema(
      *             @SWG\Property(
-     *                 property="product",
+     *                 property="product_image",
      *                 type="object",
-     *                 ref="#/definitions/product"
+     *                 ref="#/definitions/product_image"
      *             )
      *         )
      *     ),
@@ -299,29 +299,29 @@ class ProductController extends BaseController
      *
      * Update the specified resource in storage.
      *
-     * @param ProductService $service
-     * @param ProductUpdateRequest $request
-     * @param Product $product
+     * @param ProductImageService $service
+     * @param ProductImageUpdateRequest $request
+     * @param ProductImage $productImage
      *
      * @throws Throwable
      *
      * @return \Illuminate\Http\Response
      */
-    public function update(ProductService $service, ProductUpdateRequest $request, Product $product)
+    public function update(ProductImageService $service, ProductImageUpdateRequest $request, ProductImage $productImage)
     {
-        $product = $service->update($request, $product);
+        $productImage = $service->update($request, $productImage);
 
-        return response()->json(compact('product'));
+        return response()->json(compact('productImage'));
     }
 
     /**
      * @SWG\Delete(
-     *     path="/api/products/{id}",
+     *     path="/api/product_images/{id}",
      *     summary="RESOURCE削除",
      *     description="RESOURCEを論理削除する。",
      *     consumes={"application/json"},
      *     produces={"application/json"},
-     *     tags={"Products"},
+     *     tags={"ProductImages"},
      *
      *    @SWG\Parameter(
      *         name="Authorization",
@@ -338,7 +338,7 @@ class ProductController extends BaseController
      *         required=true,
      *         type="object",
      *         @SWG\Schema(
-     *             ref="#/definitions/ProductUpdateRequest"
+     *             ref="#/definitions/ProductImageUpdateRequest"
      *         )
      *     ),
      *
@@ -347,9 +347,9 @@ class ProductController extends BaseController
      *         description="Success",
      *         @SWG\Schema(
      *             @SWG\Property(
-     *                 property="product",
+     *                 property="product_image",
      *                 type="object",
-     *                 ref="#/definitions/ProductResource"
+     *                 ref="#/definitions/ProductImageResource"
      *             )
      *         )
      *     ),
@@ -384,28 +384,28 @@ class ProductController extends BaseController
      *
      * Remove the specified resource from storage.
      *
-     * @param ProductService $service
-     * @param Product $product
+     * @param ProductImageService $service
+     * @param ProductImage $productImage
      *
      * @throws Throwable
      *
      * @return \Illuminate\Http\Response
      */
-    public function destroy(ProductService $service, Product $product)
+    public function destroy(ProductImageService $service, ProductImage $productImage)
     {
-        $product = $service->destroy($product);
+        $productImage = $service->destroy($productImage);
 
-        return response()->json(compact('product'));
+        return response()->json(compact('productImage'));
     }
 
     /**
      * @SWG\Post(
-     *     path="/api/products/search",
+     *     path="/api/product_images/search",
      *     summary="RESOURCE検索",
      *     description="RESOURCEを検索する。",
      *     consumes={"application/json"},
      *     produces={"application/json"},
-     *     tags={"Products"},
+     *     tags={"ProductImages"},
      *
      *     @SWG\Parameter(
      *         name="Authorization",
@@ -421,7 +421,7 @@ class ProductController extends BaseController
      *         type="object",
      *         description="リクエストパラメータ",
      *         @SWG\Schema(
-     *             ref="#/definitions/ProductSearchRequest"
+     *             ref="#/definitions/ProductImageSearchRequest"
      *         )
      *     ),
      *     @SWG\Response(
@@ -429,8 +429,8 @@ class ProductController extends BaseController
      *         description="Success",
      *         @SWG\Schema(
      *             @SWG\Property(
-     *                 property="products",
-     *                 ref="#/definitions/product"
+     *                 property="product_images",
+     *                 ref="#/definitions/product_image"
      *             )
      *         )
      *     ),
@@ -463,15 +463,15 @@ class ProductController extends BaseController
      *     )
      * )
      *
-     * @param ProductService $service
-     * @param ProductSearchRequest $request
+     * @param ProductImageService $service
+     * @param ProductImageSearchRequest $request
      *
      * @return \Illuminate\Http\Response
      */
-    public function search(ProductService $service, ProductSearchRequest $request)
+    public function search(ProductImageService $service, ProductImageSearchRequest $request)
     {
-        $products = $service->search($request);
+        $productImages = $service->search($request);
 
-        return response()->json(compact('products'));
+        return response()->json(compact('productImages'));
     }
 }
